# pFOTA

./: .gitignore  README.md
cL_LATEST/make/: 850eserv.mbs  Bootloader.dep  Bootloader.dnm  Bootloader.elf  Bootloader.elf.bld  Bootloader.hex  Bootloader.ld  Bootloader.map  Bootloader.rc  Makefile.RH850.GHS.GHS.LinkerScriptDefault  Makefile.RH850.GHS.GHS.make  Makefile.config  Makefile.derivative.memorymap  Makefile.derivative.settings  Makefile.static  m.bat
cL_LATEST/source/: EcuabCanIf  EcuabCanTrcv  EcuabCryIf  EcuabFee  EcuabMemIf  LibAutosar  McalCan  McalCry  McalDio  McalEep  McalFls  McalMcu  SwcServiceBswM  SwcServiceCanTp  SwcServiceComM  SwcServiceCsm  SwcServiceDcm  SwcServiceDem  SwcServiceDet  SwcServiceEcuM  SwcServiceNvM  SwcServiceOs  SwcServicePduR  SwcServiceSchM  SwcServiceStartUp  b_ConfigSpec.bat  common
cL_R2023.09.01/make/: Bootloader.dnm  Bootloader.elf  Bootloader.ld  Bootloader.map  Makefile  Makefile.RH850.GHS.GHS.LinkerScriptDefault  Makefile.project.part.defines  _start_console.bat  b.bat  j.bat  m.bat
cL_R2023.09.01/source/: EcuabCanIf  EcuabCanTrcv  EcuabCryIf  EcuabFee  EcuabMemIf  LibAutosar  McalCan  McalCry  McalDio  McalEep  McalFls  McalMcu  SwcServiceCsm  (+14 more)
main_R2023/: CMakeLists.txt
main_R2023/source/: LibAutosar  McalFls  McalMcu  McalWdg  ProjectCompiler  SwcApplStartUp  SwcServiceDet  SwcServiceOs  SwcServiceStartUp  b_ConfigSpec.bat  common
main_R2023/source/ProjectCfg/: CfgMcalFls.c  CfgMcalFls.h  CfgMcalWdg.h  CfgSwcServiceStartUp.c  CfgSwcServiceStartUp.h
main_R2023/source/wrappers/: wrappers.c
main_R2024/: make
(+1392 files in other folders)
